--- a/.github/workflows/daily_news.yml
+++ b/.github/workflows/daily_news.yml
@@ -25,8 +25,11 @@ jobs:
 
       - name: Run NAA Agent
         env:
-          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }} # This is the "Injection" step
-        run: python naa_scout.py
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+        run: |
+          for i in {1..3}; do
+            python naa_scout.py && break || sleep 30;
+          done
 
       - name: Commit and Push if news changed
         run: |
