--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,5 +8,5 @@
       ]
     }
   },
-  "postStartCommand": "git pull origin main --rebase"
+  "postStartCommand": "git stash && git pull origin main --rebase && git stash pop || echo 'Workspace was already clean or sync complete.'"
 }
